# webRTL

./: .gitignore  Cargo.toml  build.sh  synth.sh  synth.yosys
examples/: parallax.hs  vga.hs
examples/verilog/Parallax/parallax/: parallax.blif  parallax.manifest  parallax.v
examples/verilog/VGA/: topEntity.v
examples/verilog/VGA/vga/: vga.blif  vga.manifest  vga.v
site/: index.html  index.js  package-lock.json  package.json
src/: blif.rs  config.rs  graphics.rs  lib.rs  main.rs  sim.rs  util.rs
